--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,14 @@
 {
-    "manifest_version": 3,
-    "name": "deepwork Timer",
-    "version": "1.0",
-    "description": "Timer pour deepwork session",
-    "action": {
-      "default_popup": "index.html",
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
-      }
-    },
-    "permissions": [
-      "activeTab"
-    ],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "icons": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    },
-    "host_permissions": [
-      "http://*/*",
-      "https://*/*"
-    ]
-  }
-  
+  "manifest_version": 3,
+  "name": "Deep Work Timer",
+  "version": "1.0",
+  "description": "Timer professionnel pour les sessions de Deep Work",
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icons/icon.png"
+  },
+  "permissions": ["storage", "notifications"]
+}
